# mathesis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: sitemap.xml
frontend/src/: App.vue  docs.ts  editor-assist.ts  engine.ts  i18n.ts  main.ts  share.ts  style.css  worker.ts
frontend/src/components/: DocsPanel.vue  Editor.vue  Graphics.vue  LangSwitch.vue  MathOutput.vue  Solutions.vue  SolveBuilder.vue
src/: ast.rs  diff.rs  elliptic.rs  error.rs  eval.rs  lexer.rs  lib.rs  mpoly.rs  parser.rs  plot.rs  random.rs  solve.rs  value.rs
